fixing height on mobile

--- a/src/components/MessageForm/MessageForm.module.css
+++ b/src/components/MessageForm/MessageForm.module.css
@@ -67,6 +67,7 @@
   .messageInputContainer {
     width: 260px;
     justify-content: flex-end;
+    padding: 4px 20px;
   }  
 }
 .sendImg {
