--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,7 +1,7 @@
 @media (min-width: 320px) and (max-width: 767px) {
   .container {
     width: 320px;
-    padding: 20px;
+    padding: 0 20px 0 20px;
   }
 }
 
